--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://unpkg.com/vue@next" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.2" defer></script>
     <script src="app.js" defer></script>
   </head>
   <body>
