--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ol>
           <li>Goblin (easy) - Your average Joe when it comes to Monsters. Nothing special about him.</li>
           <li>Barbarian (medium) - The berserker. His strength increases by 2% for every health point he loses.</li>
-          <li>Dracula (medium/hard) - As a vampire he boasts 200 HP and also has a chance to lifesteal 10% of any damage he deals.</li>
+          <li>Dracula (medium/hard) - As a vampire he boasts 200 HP, has a chance to lifesteal 10% of any damage he deals, and when under 20% health he will passively heal 2 HP per second.</li>
         </ol>
       </p>
       </section>
