Change log messages

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </section>
       <section v-if="toggleRules">
         <p><strong>How to play:</strong> To win you must defeat 3 monsters. Each Monster is progressively more difficult and/or utilizes different abilities. Use the buttons to interact.
-        </br><strong>Combat:</strong> This game is based around the combat triangle. All attacks from you or the Monster can hit or miss. If you attack with Melee and the Monster's attack style is Range, then you'll almost be guarenteed to hit.
-        On the otherhand, if you attack with Melee and the Monster is using Mage then you're more likely to miss. Keep in mind the Monster may change attack styles.
+        </br><strong>Combat:</strong> This game is based around the combat triangle. All attacks from you or the Monster can hit or miss. If you attack with Melee and the Monster's attack style is Range, then you'll almost be guarenteed to hit and rewarded with a damage boost.
+        On the otherhand, if you attack with Melee and the Monster is using Mage then you're more likely to miss and you'll be penalized damage. Keep in mind the Monster may change attack styles.
         <ul>
           <li>Melee is strong against Range</li>
           <li>Range is strong against Mage</li>
