--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
             </div>
           </div>
           <div class="flexbox-item flexbox-item-2">
-            <img class="monster" :src="currentMonster.name === 'Goblin' ? 'assets/goblin-head.png' : currentMonster.name === 'Dragon' ? 'assets/double-dragon.png' : 'assets/vampire-dracula.png'" alt="Monster Image">
+            <img class="monster" :src="currentMonster.name === 'Goblin' ? 'assets/goblin-head.png' : currentMonster.name === 'Barbarian' ? 'assets/barbarian.png' : 'assets/vampire-dracula.png'" alt="Monster Image">
             <h2>{{ currentMonster.name }}</h2>
           </div>
           <div class="flexbox-item flexbox-item-3">
             <p style="margin-bottom: 0;">{{ monsterHealthBarValue }} / {{ currentMonster.maxHp }}</p>
             <p style="font-size: small; margin-top: 0; margin-bottom: 0;">Str: {{ currentMonster.strength }}</p>
-            <p style="font-size: small; margin-top: 0; margin-bottom: 0;">Max Hit: {{ currentMonster.strength * 2.1 }}</p>
+            <p style="font-size: small; margin-top: 0; margin-bottom: 0;">Max Hit: {{ round(currentMonster.strength * 2.1) }}</p>
             <p style="font-size: small; margin-top: 0; margin-bottom: 0;">Max Counter:  {{ Math.ceil(currentMonster.strength * 4.6) }}</p>
             </div>
         </div>
@@ -99,7 +99,7 @@
           <div class="flexbox-item flexbox-item-3">
             <p style="margin-bottom: 0;">{{ heroHealthBarValue }} / {{ hero.maxHp }}</p>
             <p style="font-size: small; margin-top: 0; margin-bottom: 0;">Str: {{ hero.strength }}</p>
-            <p style="font-size: small; margin-top: 0; margin-bottom: 0;">Max Hit: {{ specialAttackOnCooldown ? hero.strength * 2.1 : Math.max(specialAttackMaxHit, hero.strength * 2.1) }}</p>
+            <p style="font-size: small; margin-top: 0; margin-bottom: 0;">Max Hit: {{ specialAttackOnCooldown ? round(hero.strength * 2.1) : round(Math.max(specialAttackMaxHit, hero.strength * 2.1)) }}</p>
             <p style="font-size: small; margin-top: 0; margin-bottom: 0;">Max Heal: {{ Math.ceil((hero.maxHp - hero.heroHp) * 0.5) }}</p>
           </div>
         </div>
