--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Simple click based monster slayer game.">
+    <meta name="description" content="Turned based strategy game. Defeat all 4 monsters to win.">
     <meta name="keywords" content="HTML, CSS, JavaScript, Vue">
     <meta name="author" content="Jay-Ar Brouillard">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
